--- a/public/.htaccess
+++ b/public/.htaccess
@@ -12,6 +12,12 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+    
+    <IfModule mod_headers.c>
+        Header add Access-Control-Allow-Origin "*"
+        Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type"
+        Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
+    </IfModule>
 </IfModule>
 
 <IfModule mod_headers.c>
