--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,6 +2,12 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews
     </IfModule>
+    
+    #<IfModule mod_headers.c>
+    #    Header always set Access-Control-Allow-Origin "*"
+    #    Header always set Access-Control-Allow-Headers "origin, x-requested-with, content-type"
+    #    Header always set Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
+    #</IfModule>
 
     RewriteEngine On
 
@@ -12,16 +18,5 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
-    
-    <IfModule mod_headers.c>
-        Header add Access-Control-Allow-Origin "*"
-        Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type"
-        Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
-    </IfModule>
 </IfModule>
 
-<IfModule mod_headers.c>
-    Header add Access-Control-Allow-Origin "*"
-    Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type"
-    Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
-</IfModule>
