--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,11 +3,9 @@
         Options -MultiViews
     </IfModule>
     
-    #<IfModule mod_headers.c>
-    #    Header always set Access-Control-Allow-Origin "*"
-    #    Header always set Access-Control-Allow-Headers "origin, x-requested-with, content-type"
-    #    Header always set Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
-    #</IfModule>
+    Header always set Access-Control-Allow-Origin "*"
+    Header always set Access-Control-Allow-Headers "origin, x-requested-with, content-type"
+    Header always set Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 
     RewriteEngine On
 
